pgcenter (devel) unstable; urgency=low

  * pg-10: add pg_stat_replication lag values.
  * pg-10: add pg_stat_activity.backend_type.
  * pg-10: add support for updated pg_stat_replication (xlog -> wal).
  * change waiting connections accounting in postgres summary area.
  * make pg_stat_replication's xact_age,time_age optional, only when track_commit_timestamp is enabled.
  * use pg_roles instead of pg_authid due to https://github.com/lesovsky/pgcenter/issues/35.
  * fix wrong memory allocation for iostat/ifstat.
  * add details about prepared transactions: total, max, maxtime.
  * add xact_age,time_age to pg_stat_replication stats (available since 9.5).
  * add xlog field to pg_stat_replication stats.
  * allow to save current stat context into conninfo file (~/.pgcenterrc).
  * implement parsetr() as the fast replacement for sscanf().
  * refactoring: remove unnecessary variable from tab_s struct.
  * refactoring: remove redundant loop+case from init_tabs().
  * add system stats.
  * add handling for RHEL-specific postgres paths.
  * move the sources into src/ dir.
  * add -Wextra, -Wfloat-equal into Makefile and fix collateral warnings.
  * refactoring internal color management.
  * add new bufsize macros, increase line bufsize in read_diskstats().
  * add PVS-Studio comments, fix issues generated by PVS.
  * rename screens/consoles entities to more convenient name - tabs.
  * fix build errors on Ubuntu
  * split single file to many; collapse excessive comments.
  * add max_connections info into activity string.
  * rewrite check_string() function.
  * fix float sorting -- issues #29.
  * reduce size of memory allocations for data arrays.
  * fix bufsize in set_filter().

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sat, 01 Oct 2016 13:23:00 +0500

pgcenter (0.3.0) unstable; urgency=low

  * print static program name in title instead of argv[0].
  * exclude (auto)vacuum tasks accounting in xact_maxtime field.
  * fix runglish, typos and cosmetic changes.